finished swagger docs, project complete
