# controllers/contacts.js
@@ -2,6 +2,7 @@ const mongodb = require('../db/database');
 const { ObjectId } = require('mongodb');
 
 const getAll = async (req, res) => {
+    //#swagger.tags=['Contacts']
     const result = await mongodb.getDatabase().db('project1').collection('contacts').find();
     result.toArray().then((contacts) => {
         res.setHeader('Content-Type', 'application/json');
@@ -10,6 +11,7 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
+    //#swagger.tags=['Contacts']
     const userId = new ObjectId(req.params.id);
     const result = await mongodb.getDatabase().db('project1').collection('contacts').find({ _id: userId });
     result.toArray().then((contacts) => {
@@ -19,6 +21,7 @@ const getSingle = async (req, res) => {
 };
 
 const createContact = async(req, res) => {
+    //#swagger.tags=['Contacts']
     const contact = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
@@ -35,6 +38,7 @@ const createContact = async(req, res) => {
 };
 
 const updateContact = async(req, res) => {
+    //#swagger.tags=['Contacts']
     const userId = new ObjectId(req.params.id);
     const contact = {
         firstName: req.body.firstName,
@@ -52,17 +56,14 @@ const updateContact = async(req, res) => {
 };
 
 const deleteContact = async(req, res) => {
-    try {
+    //#swagger.tags=['Contacts']
     const userId = new ObjectId(req.params.id);
     const response = await mongodb.getDatabase().db('project1').collection('contacts').deleteOne({ _id: userId });
     if (response.deletedCount > 0) {
         res.status(204).end();
     } else {
-        res.status(404).send('Contact not found.');
+        res.status(500).json(response.error || 'Some error occured while deleting the contact.');
     }
- } catch (error) {
-    res.status(500).json(error.message || 'Some error occured while deleting the contact.')
- }
 };
 
 module.exports = { getAll, getSingle, createContact, updateContact, deleteContact };
